--- a/web sitev2.html
+++ b/web sitev2.html
@@ -75,6 +75,8 @@
             text-align: center;
             padding: 5rem 1rem;
             background-image: url('https://static.wixstatic.com/media/1153c3_497d3526789b43618a0b9765f72c1b91~mv2.jpg');
+            
+            background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/18/a1/f3/62/photo0jpg.jpg?w=1400&h=800&s=1');
             background-size: cover;
             background-position: center;
             color: white;
@@ -282,7 +284,7 @@
             bottom: 20px;
             right: 20px;
             background-color: #25D366;
-            color: white;
+            color: rgba(255, 255, 255, 0.992);
             width: 60px;
             height: 60px;
             border-radius: 50%;
@@ -391,6 +393,19 @@
                     </div>
                 </div>
 
+<div class="product-card">
+                    <div class="product-image">
+                        <img src="https://www.yoreselbakkal.com.tr/idea/jl/78/myassets/products/474/seferihisar-diyet-keci-yoruk.jpg?revision=1743247710" alt="beyaz keçi peyniri">
+                    </div>
+                    <div class="product-info">
+                        <h3>keçi peyniri</h3>
+                        <p>Doğal,yaylada yayılmış keçi sütünden beyaz peynir</p>
+                        <p class="price">₺400.00/kg</p>
+                        <a href="#" class="btn">Sepete Ekle</a>
+                    </div>
+                </div>
+
+
                 <div class="product-card">
                     <div class="product-image">
                         <img src="https://hizliservis.mado.com.tr/mado-sofralik-dogal-yagli-siyah-zeytin-1000-gr-yoresel-urunler-mado-1037-32-O.jpg" alt="Siyah Zeytin">
@@ -421,7 +436,7 @@
             <div class="about-content">
                 <h2 class="section-title">Hakkımızda</h2>
                 <p>Küçükler Tarım ailesi olarak, Manisa Gördes Börez Köyü'nde nesillerdir tarım ve ceviz yetiştiriciliği yapmaktayız. Aile geleneğimizi sürdürerek, en kaliteli cevizleri sizlere sunmaktan gurur duyuyoruz.</p>
-                <p>Ürünlerimiz tamamen doğal yöntemlerle yetiştirilmekte ve titizlikle paketlenmektedir. Müşteri memnuniyeti bizim için en önemli önceliktir.</p>
+                <p>Ürünlerimiz tamamen doğal yöntemlerle yetiştirilmekte ve titizlikle paketlenmektedir. Müşteri memnuniyeti bizim için en önemli önceliktir.kalitemiz ile hep öndeyiz...</p>
             </div>
         </section>
         
